# f1-game-library

./: Cargo.toml  rustfmt.toml
src/: lib.rs
src/event_loop/: event_loop.rs  event_loop_sync.rs  mod.rs
src/telemetry_data/: car_damage_data.rs  car_setup_data.rs  car_status_data.rs  car_telemetry_data.rs  event_data.rs  final_classification.rs  lap_data.rs  lobby_info.rs  mod.rs  motion_data.rs  motion_extended_data.rs  packet_header.rs  participant_data.rs  session_data.rs  session_history.rs  tyre_set_data.rs
